c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/empty_initializer_list.c
// An initializer list must have at least one element
// NOTE: empty initializer lists are valid as of C23
int main(void) {
    int arr[1] = {};
    return 0;
}